--- a/src/main/resources/templates/task/paginaVisualizzaListaTaskPersonali.html
+++ b/src/main/resources/templates/task/paginaVisualizzaListaTaskPersonali.html
@@ -3,7 +3,7 @@
 <head>
 
     <head th:include="/fragments/fragments.html :: head">
-        <title id="pageTitle">Amigo|I miei gruppi</title>
+        <title id="pageTitle">Amigo|Lista Task personali</title>
     </head>
 </head>
 <body>
