Add some fix and stable version of RF_4.1 RF_4.2 RF_4.3 RF_4.4 RF_4.5 RF_4.6 RF_4.7 RF_4.8

--- a/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
@@ -70,6 +70,10 @@
     <i class="close icon"></i>
     <p>Hai creato correttamente il Task </p>
 </div>
+<div class="ui message negative" th:if="${flagCreazione==false}">
+    <i class="close icon"></i>
+    <p>Non hai creato correttamente il Task </p>
+</div>
 <script>$('.message .close')
     .on('click', function() {
         $(this)
