--- a/src/main/resources/templates/task/paginaModificaTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaModificaTaskSupergruppo.html
@@ -34,7 +34,7 @@
     </div>
     <div class="field">
         <label>Data scadenza</label>
-        <input type="date" name="last-name" placeholder="" path="dataScadenza" th:field="*{dataScadenza}">
+        <input type="date" name="last-name" placeholder="" path="dataScadenza" th:field="*{dataScadenza}" th:value="1/1/2019">
     </div>
     <div class="field">
         <div class="field">
