--- a/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
@@ -10,7 +10,6 @@
 <div th:insert="fragments/fragments.html :: header"></div>
 <h1 class="ui header" align="center">I task del gruppo : </h1>
 
-<!--da allineare al centro -->
 <form
         class="ui form text container"
         method="post"
@@ -20,7 +19,6 @@
 
     <div class="field">
         <label>Nome task</label>
-<!--        <input type="text" name="first-name" placeholder="First Name" path="nome">-->
         <input type="text" placeholder="Nome" path="nome" th:field="*{nome}">
     </div>
     <div class="field">
@@ -48,11 +46,6 @@
         <th:block th:each="persona : ${persone}">
            <tr class="center aligned">
                <td>
-
-<!--                   <form:radiobuttons path="p" th:value="persona.nome" items="${persone}">-->
-<!--                       <form:radiobutton path="pp" th:value="persona.nome"></form:radiobutton>-->
-<!--                   </form:radiobuttons>-->
-<!--                   <form:radiobutton path="pp" th:value="persona.nome"></form:radiobutton>-->
                    <input type="radio" th:name="idPersona" path="idPersona" th:value="${persona.id}">
                </td>
                 <td th:text="${persona.nome}"></td>
@@ -66,11 +59,11 @@
 </form>
 
 </table>
-<div class="ui message success" th:if="${flagCreazione==true}">
+<div class="ui message success text container" th:if="${flagCreazione==true}">
     <i class="close icon"></i>
     <p>Hai creato correttamente il Task </p>
 </div>
-<div class="ui message negative" th:if="${flagCreazione==false}">
+<div class="ui message negative text container" th:if="${flagCreazione==false}">
     <i class="close icon"></i>
     <p>Non hai creato correttamente il Task </p>
 </div>
@@ -84,9 +77,5 @@
 ;</script>
 
 </div>
-
-
-
-
 </body>
 </html>
