--- a/src/main/resources/templates/task/paginaModificaTask.html
+++ b/src/main/resources/templates/task/paginaModificaTask.html
@@ -10,7 +10,6 @@
 <div th:insert="fragments/fragments.html :: header"></div>
 <h1 class="ui header" align="center">Modifica <span th:text="${taskForm.nome}"></span>: </h1>
 
-<!--TODO -->
 <form
         class="ui form text container"
         method="post"
@@ -22,12 +21,11 @@
     </div>
     <div class="field">
         <label>Nome task</label>
-        <!--        <input type="text" name="first-name" placeholder="First Name" path="nome">-->
         <input type="text" th:value="${taskForm.nome}" path="nome" th:field="*{nome}">
     </div>
     <div class="field">
         <label>Data scadenza</label>
-        <input type="date" name="${taskForm.dataScadenza}" th:value="${#dates.format(date, 'yyyy-MM-dd') }" path="dataScadenza" th:field="*{dataScadenza}">
+        <input type="date" name="${taskForm.dataScadenza}" th:value="${taskForm.dataScadenza}" path="dataScadenza" th:field="*{dataScadenza}" >
     </div>
     <div class="field">
         <div class="field">
@@ -63,18 +61,6 @@
 </form>
 
 </table>
-<div class="ui message success" th:if="${flagCreazione==true}">
-    <i class="close icon"></i>
-    <p>Hai modificato correttamente il Task </p>
-</div>
-<script>$('.message .close')
-    .on('click', function() {
-        $(this)
-            .closest('.message')
-            .transition('fade')
-        ;
-    })
-;</script>
 
 </div>
 </body>
