--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -21,7 +21,7 @@
         <a class="item" href="/taskPersonali">
             I miei task
         </a>
-        <a class="item">
+        <a class="item" href="/repository">
             Repository d'Ateneo
         </a>
         <div class="right menu">
