--- a/src/main/resources/templates/repository/repository.html
+++ b/src/main/resources/templates/repository/repository.html
@@ -13,7 +13,7 @@
 
     <form th:action="@{/repository/uploadDocumento}" method="post" enctype="multipart/form-data" >
             <label for="file">Filename:</label>
-            <input type="file" name="file" id="file" multiple/>
+            <input type="file" name="file" id="file"/>
             <input type="submit" name="submit" value="Submit" />
     </form>
 
