--- a/src/main/resources/templates/task/paginaDettagliTaskPersonali.html
+++ b/src/main/resources/templates/task/paginaDettagliTaskPersonali.html
@@ -41,26 +41,12 @@
                 <td colspan="4" th:text="${task.descrizione}"></td>
             </tr>
 
-            <tr th:if="${isResponsabile==true}" class="center aligned">
-                <td colspan="1">
-                    <a class="ui green button"
-                       th:href="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/dettagliTaskSupergruppo{idTask}/approvazione' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Accetta </a>
-                </td>
-                <td>
-                    <a class="ui primary button"
-                       th:href="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/dettagliTaskSupergruppo{idTask}/modifica' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Modifica</a>
-                </td>
-                <td colspan="1">
-                    <a class="ui red button"
-                       th:href="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/dettagliTaskSupergruppo{idTask}/rifiuta' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Respingi</a>
-                </td>
-            </tr>
-            <tr th:if="${(isResponsabile==false) and ( ( task.stato.equals('approvato') )==false )}" class="center aligned">
+
+            <tr th:if="${( ( task.stato.equals('approvato') )==false ) and ( ( task.stato.equals('in valutazione') )==false )}" class="center aligned">
                 <td colspan="3">
-                    <a class="ui primary button"> Completa</a>
+                    <a class="ui primary button"
+                       th:href="@{'/taskPersonali/dettagliTask{idTask}/completa' (idTask=${task.id}) }"
+                    > Completa</a>
                 </td>
 
             </tr>
@@ -69,6 +55,17 @@
         </tbody>
     </table>
 </div>
-
+<div class="ui message green text container" th:if="${flagAzione==1}">
+    <i class="close icon"></i>
+    <p>Hai completato il Task </p>
+</div>
+<script>$('.message .close')
+    .on('click', function() {
+        $(this)
+            .closest('.message')
+            .transition('fade')
+        ;
+    })
+;</script>
 </body>
 </html>
