--- a/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
@@ -12,8 +12,8 @@
         <table class="ui celled table striped">
             <thead>
             <tr class="center aligned">
-                <th>Nome</th>
                 <th>Cognome</th>
+                <th>Nome</th>
                 <th>Email</th>
                 <th></th>
 
@@ -22,11 +22,11 @@
             <tbody>
             <th:block th:each="persona : ${persone}">
                 <tr class="center aligned">
-                    <td th:text="${persona.nome}"></td>
                     <td th:text="${persona.cognome}"></td>
+                    <td th:text="${persona.nome}"></td>
                     <td th:text="${persona.user.getEmail()}"></td>
                     <td>
-                        <a th:href="@{'/gruppi/commissioni/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}" class="ui primary button">
+                        <a th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}" class="ui primary button">
                             Aggiungi
                         </a>
                     </td>
