--- a/src/main/resources/templates/gruppo/crea_commissione.html
+++ b/src/main/resources/templates/gruppo/crea_commissione.html
@@ -4,7 +4,9 @@
     <title id="pageTitle">Amigo|Crea Commissione</title>
 </head>
         <body>
-            <h1 class="ui header"  align="center">Creazione Commissione</h1>
+        <div th:insert="fragments/fragments.html :: header"></div>
+
+        <h1 class="ui header"  align="center">Creazione Commissione</h1>
             <div class = "ui main text container">
                 <div class = "ui form">
                     <form action="#" th:action="@{'/gruppi/{idGruppo}/commissioni/create'( idGruppo=${idGruppo})}" th:object="${command}" method="post">
