Use intellij formatter

--- a/src/main/resources/templates/gruppo/aggiunta_membro.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro.html
@@ -7,7 +7,7 @@
 <body>
 <div th:insert="fragments/fragments.html :: header"></div>
 
-<h1 class="ui header"  align="center">Aggiungi membro al <span th:text="${supergruppo.name}"></span> </h1>
+<h1 align="center" class="ui header">Aggiungi membro al <span th:text="${supergruppo.name}"></span></h1>
 
 <div class="ui main text container">
     <table class="ui celled table striped">
@@ -27,7 +27,8 @@
                 <td th:text="${persona.nome}"></td>
                 <td th:text="${persona.user.getEmail()}"></td>
                 <td>
-                    <a th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}" class="ui primary button">
+                    <a class="ui primary button"
+                       th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}">
                         Aggiungi
                     </a>
                 </td>
@@ -37,10 +38,11 @@
     </table>
     <div class="ui message success" th:if="${flagAggiunta==1}">
         <i class="close icon"></i>
-        <p>Hai aggiunto corettamente <span th:text="${personaAggiunta.nome}"></span> <span th:text="${personaAggiunta.cognome}"></span></p>
+        <p>Hai aggiunto corettamente <span th:text="${personaAggiunta.nome}"></span> <span
+                th:text="${personaAggiunta.cognome}"></span></p>
     </div>
     <script>$('.message .close')
-        .on('click', function() {
+        .on('click', function () {
             $(this)
                 .closest('.message')
                 .transition('fade')
