--- a/src/main/resources/templates/gruppo/crea_commissione.html
+++ b/src/main/resources/templates/gruppo/crea_commissione.html
@@ -3,18 +3,19 @@
 <head th:include="/fragments/fragments.html :: head">
     <title id="pageTitle">Amigo|Crea Commissione</title>
 </head>
-        <body>
-        <div th:insert="fragments/fragments.html :: header"></div>
+<body>
+<div th:insert="fragments/fragments.html :: header"></div>
 
-        <h1 class="ui header"  align="center">Creazione Commissione</h1>
-            <div class = "ui main text container">
-                <div class = "ui form">
-                    <form action="#" th:action="@{'/gruppi/{idGruppo}/commissioni/create'( idGruppo=${idGruppo})}" th:object="${command}" method="post">
-                        <p>Nome commissione: <input type="text" th:field="*{name}" /></p>
-                        <p>Descrizione: <textarea th:field="*{descrizione}" ></textarea></p>
-                        <input type = "submit" class = "ui button" name = "Invia">
-                    </form>
-                </div>
-            </div>
-        </body>
+<h1 align="center" class="ui header">Creazione Commissione</h1>
+<div class="ui main text container">
+    <div class="ui form">
+        <form action="#" method="post"
+              th:action="@{'/gruppi/{idGruppo}/commissioni/create'( idGruppo=${idGruppo})}" th:object="${command}">
+            <p>Nome commissione: <input th:field="*{name}" type="text"/></p>
+            <p>Descrizione: <textarea th:field="*{descrizione}"></textarea></p>
+            <input class="ui button" name="Invia" type="submit">
+        </form>
+    </div>
+</div>
+</body>
 </html>
