--- a/src/main/resources/templates/gruppo/gruppo_detail.html
+++ b/src/main/resources/templates/gruppo/gruppo_detail.html
@@ -5,7 +5,7 @@
 </head>
     <body>
     <div th:insert="fragments/fragments.html :: header"></div>
-    <h1 class="ui header"  align="center">Membri del <span th:text="${supergruppo.name}"></span> </h1>
+    <h1 align="center" class="ui header">Membri del <span th:text="${supergruppo.name}"></span></h1>
     <div class="ui main text container">
         <table class="ui celled table">
             <thead>
