--- a/src/main/resources/templates/repository/repository.html
+++ b/src/main/resources/templates/repository/repository.html
@@ -8,44 +8,44 @@
 </head>
 <body>
 <div th:insert="fragments/fragments.html :: header"></div>
+<h1 class="ui header" align="center">Repository d'Ateneo</h1>
+    <div class="ui main text container">
 
-    <h1 class="ui header" align="center">Carica documento</h1>
-
-    <form th:action="@{/repository/uploadDocumento}" method="post" enctype="multipart/form-data" >
-            <label for="file">Filename:</label>
-            <input type="file" name="file" id="file"/>
-            <input type="submit" name="submit" value="Submit" />
-    </form>
-
-    <div class="ui message success" th:if="${flagAggiunta==1}">
-        <i class="close icon"></i>
-        <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
-    </div>
-
-<table class="ui celled table striped">
-    <thead>
-    <tr class="center aligned">
-        <th>Nome documento</th>
-    </tr>
-    </thead>
-    <tbody>
-        <h1 class="ui header" align="center">Documenti</h1>
-        <tr class="center aligned">
-            <td th:if="${#lists.isEmpty(documenti)}">
-                <span>Non sono presenti documenti in repository.</span>
-            </td>
-        </tr>
-        <th:block th:each="documento : ${documenti}">
+        <table class="ui celled table striped">
+            <thead>
             <tr class="center aligned">
-                <td>
-                    <a target=”_blank” th:href="@{'/repository/{idDocumento}' ( idDocumento=${documento.id})}">
-                        <span th:text="${documento.nome}"></span>
-                    </a>
-                </td>
+                <th>
+                    <form action="/repository">
+                        <div >
+                            <input type="text" name="name" placeholder="Inserisci nome documento da ricercare">
+                            <input type="submit" value="Ricerca" >
+                        </div>
+                    </form>
+                </th>
             </tr>
-        </th:block>
-    </tbody>
-</table>
+            </thead>
+            <tbody>
+                <tr class="center aligned">
+                    <td th:if="${#lists.isEmpty(documenti)}">
+                        <span>Non sono presenti documenti in repository.</span>
+                    </td>
+                </tr>
+                <th:block th:each="documento : ${documenti}">
+                    <tr class="center aligned">
+                        <td>
+                            <a target=”_blank” th:href="@{'/repository/{idDocumento}' ( idDocumento=${documento.id})}">
+                                <span th:text="${documento.nome}"></span>
+                            </a>
+                        </td>
+                    </tr>
+                </th:block>
+            </tbody>
+        </table>
 
+        <a th:if="${flagPQA==1}" class="ui primary button"
+           href="/repository/uploadDocumento">
+            Aggiungi
+        </a>
+    </div>
 </body>
 </html>
