Implement security on new subsystem

--- a/src/main/resources/templates/gruppo/commissione_detail.html
+++ b/src/main/resources/templates/gruppo/commissione_detail.html
@@ -64,5 +64,13 @@
                 th:text="${responsabile.cognome}"></span></p>
     </div>
 </div>
+<script>$('.message .close')
+    .on('click', function() {
+        $(this)
+            .closest('.message')
+            .transition('fade')
+        ;
+    })
+;</script>
 </body>
 </html>
